# physical_agentic_robot

./: .gitignore  .gitmodules  README.md  system_prompt.md
ros2_ws/src/: robot_agent.py
ros2_ws/src/fastvlm_caption_rqt_overlay/: CMakeLists.txt  package.xml  plugins.xml
ros2_ws/src/fastvlm_caption_rqt_overlay/include/fastvlm_caption_rqt_overlay/: caption_layer.hpp  visibility_control.h
ros2_ws/src/fastvlm_caption_rqt_overlay/src/: caption_layer.cpp
ros2_ws/src/my_robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_bringup/config/: amcl_initial_pose.yaml  gazebo_bridge.yaml  nav2_params.yaml
ros2_ws/src/my_robot_bringup/config/rviz/: urdf_config.rviz
ros2_ws/src/my_robot_bringup/launch/: display.launch.xml
ros2_ws/src/my_robot_bringup/maps/: aws_robomaker_small_warehouse_world.pgm  aws_robomaker_small_warehouse_world.yaml
ros2_ws/src/my_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_description/urdf/: camera.xacro  common_properties.xacro  lidar_sensor.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  robot_with_wheels.xacro
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_interfaces/msg/: RgbImageDepth.msg
ros2_ws/src/my_robot_interfaces/srv/: GenerateCaption.srv
ros2_ws/src/vision_spatial_mapping/: package.xml  setup.cfg  setup.py
ros2_ws/src/vision_spatial_mapping/vision_spatial_mapping/: spatial_mapper_node.py
